--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,9 @@
 .tile {
     z-index: 999;
-    background: rgba(128, 128, 255, 0.1);
-    border: 1px solid rgba(128, 128, 255, 0.5);
+    border-style: solid;
 }
 
 .name {
-    font-size: 3em;
     text-align: center;
     font-weight: bold;
-    color: rgba(128, 128, 255, 1.0);
 }
